<resources>
    <string name="app_name">MobileLabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="text_buttonCreate">Create</string>
    <string name="text_buttonRead">Read</string>
    <string name="text_buttonUpdate">Update</string>
    <string name="text_buttonDelete">Delete</string>
    <string name="text_buttonSelectAll">Select all</string>
    <string name="text_buttonDeselectAll">Deselect all</string>
    <string name="text_buttonPrintAll">Print all</string>
    <string name="text_buttonBack">Back</string>
    <string name="text_buttonOk">OK</string>
    <string name="text_buttonSave">Save</string>
    <string name="text_buttonSettings">Settings</string>
    <string name="full_name">Ivanov II</string>
    <string name="text_viewEnterNewData">Enter new data:</string>
</resources>