<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <EditText
            android:id="@+id/editTextBossFullName"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ListView
            android:id="@+id/listViewBosses"
            android:layout_width="match_parent"
            android:layout_height="481dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="208dp">

    </ListView>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/buttonCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_buttonCreate"
                    android:layout_weight="1" />

            <Button
                    android:id="@+id/buttonRead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_buttonRead" />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_buttonUpdate"
                    android:layout_weight="1" />

            <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_buttonDelete" />
        </LinearLayout>

    </LinearLayout>

    <Button
            android:text="@string/text_buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSettings" />

</LinearLayout>